--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">friendogly</string>
 
+    <!--홈화면-->
+    <string name="on_back_pressed_Message">뒤로가기 버튼을\n한번 더 누르면 종료됩니다.</string>
+
     <!--내비게이션 메뉴-->
     <string name="bottom_home">홈</string>
     <string name="bottom_woof">멍멍짖기</string>
