--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -28,4 +28,8 @@
     <!--이미지 크롭-->
     <string name="image_cropper_done">확인</string>
 
+    <!--멍개-->
+    <string name="group_user_list_subject">참여 견주</string>
+    <string name="group_dog_list_subject">댕댕이들</string>
+
 </resources>
