feat: 마이페이지 구현

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -14,6 +14,10 @@
     <!--홈화면-->
     <string name="on_back_pressed_Message">뒤로가기 버튼을\n한번 더 누르면 종료됩니다.</string>
 
+    <!--마이페이지-->
+    <string name="edit_profile_title">프로필 편집</string>
+    <string name="register_dog_title">등록하기</string>
+
     <!--내비게이션 메뉴-->
     <string name="bottom_home">홈</string>
     <string name="bottom_woof">멍멍짖기</string>
