--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <!--멍개-->
     <string name="group_user_list_subject">참여 견주</string>
     <string name="group_dog_list_subject">댕댕이들</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="group_select_dog_subject">내 댕댕이 선택</string>
+    <string name="group_select_commit">선택완료</string>
 
 </resources>
