--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -41,4 +41,7 @@
     <string name="chat_send_hint_message">메세지 보내기</string>
 
 
+    <!--멍멍 짓기-->
+    <string name="woof_dog_age">%d살</string>
+    <string name="woof_dog_name">%s가 여기서 산책하고 있어요!</string>
 </resources>
