--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <!--멍개-->
     <string name="group_user_list_subject">참여 견주</string>
     <string name="group_dog_list_subject">댕댕이들</string>
+    <string name="group_select_dog_subject">내 댕댕이 선택</string>
+    <string name="group_select_commit">선택완료</string>
 
     <!--채팅-->
     <string name="chat_list_title">채팅</string>
