--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="camera_select_photo">카메라 실행하기</string>
     <string name="birthday_title">댕댕이가 태어난 달</string>
     <string name="birthday_year">년</string>
-    <string name="birthday_month">월</string>
+    <string name="birthday_month">%02d월</string>
     <string name="neutralized_title">중성화했어요.</string>
     <string name="dog_size_title">댕댕이 사이즈</string>
     <string name="dog_add_image_title">댕댕이 사진을 추가하세요</string>
