[AN] feat: 멍개 리스트 기능 구현 (#128)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -82,6 +82,10 @@
     <string name="chat_date"> MM월 dd일</string>
     <string name="chat_unread_max_count">999+</string>
 
+    <string name="group_number_of_people">%d/%d</string>
+    <string name="group_group_info">%s · %s</string>
+    <string name="group_participate_name">모집중</string>
+    <string name="group_complete_participate_name">모집완료</string>
 
     <!--멍멍 짓기-->
     <string name="woof_dog_age">%d살</string>
