--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -18,6 +18,24 @@
     <string name="edit_profile_title">프로필 편집</string>
     <string name="register_dog_title">등록하기</string>
 
+    <!--강아지 등록-->
+    <string name="dog_name_title">댕댕이 이름</string>
+    <string name="register_dog_toolbar_title">댕댕이 등록하기</string>
+    <string name="register_dog_name_hint">댕댕이 이름을 입력해주세요</string>
+    <string name="description_title">한 줄 소개</string>
+    <string name="description_hint">한 줄 소개를 입력해주세요</string>
+    <string name="camera_select_photo">카메라 실행하기</string>
+    <string name="birthday_title">댕댕이가 태어난 달</string>
+    <string name="birthday">%d년 %02d월</string>
+    <string name="birthday_year">년</string>
+    <string name="birthday_month">%02d월</string>
+    <string name="neutralized_title">중성화했어요.</string>
+    <string name="dog_size_title">댕댕이 사이즈</string>
+    <string name="dog_add_image_title">댕댕이 사진을 추가하세요</string>
+    <string name="dog_gender_title">댕댕이 성별</string>
+    <string name="dog_submit_title">등록완료!</string>
+    <string name="bottom_sheet_dog_edit_birthday_title">언제 태어났나요?</string>
+
     <!--내비게이션 메뉴-->
     <string name="bottom_home">홈</string>
     <string name="bottom_woof">멍멍짖기</string>
@@ -28,6 +46,9 @@
     <string name="gallery_select_photo">앨범에서 사진 선택</string>
     <string name="default_image_set">기본 이미지로 변경</string>
     <string name="edit_profile_image_close">닫기</string>
+
+    <!--생년월일 선택 바텀 시트-->
+    <string name="edit_profile_birthday_submit">확인</string>
 
     <!--이미지 크롭-->
     <string name="image_cropper_done">확인</string>
