--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="group_list_add_title">모임 생성하기</string>
 
     <!--멍개 생성-->
+    <string name="group_add_information_main_title">모임을 소개해주세요.</string>
     <string name="group_add_dog_size_title">참여 가능한 댕댕이 사이즈</string>
     <string name="group_add_dog_gender_title">참여 가능한 성별 선택</string>
     <string name="group_add_group_title">모임 제목</string>
@@ -90,4 +91,6 @@
     <!--멍멍 짓기-->
     <string name="woof_dog_age">%d살</string>
     <string name="woof_dog_name">%s가 여기서 산책하고 있어요!</string>
+    <string name="group_add_group_subject_hint">모임명</string>
+    <string name="group_add_content_hint">모임을 소개해주세요.</string>
 </resources>
