--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -66,14 +66,20 @@
 
     <!--멍개 생성-->
     <string name="group_add_information_main_title">모임을 소개해주세요.</string>
-    <string name="group_add_dog_size_title">참여 가능한 댕댕이 사이즈</string>
-    <string name="group_add_dog_gender_title">참여 가능한 성별 선택</string>
+    <string name="group_add_information_main_content"> 기준으로 모임이 생성돼요.</string>
+    <string name="group_add_dog_size_title">댕댕이 사이즈 선택</string>
+    <string name="group_add_dog_gender_title">댕댕이 성별 선택</string>
     <string name="group_add_group_title">모임 제목</string>
     <string name="group_add_group_number">참여 가능 인원</string>
     <string name="group_add_group_content">모임 소개</string>
     <string name="group_add_group_my_dog">내 댕댕이</string>
     <string name="group_add_group_add_my_dog_text">댕댕이 추가</string>
     <string name="group_add_group">등록하기</string>
+    <string name="group_add_group_subject_hint">모임명</string>
+    <string name="group_add_content_hint">모임을 소개해주세요.</string>
+    <string name="group_add_filter_main_title">모집할 댕댕이를 설정해주세요.</string>
+    <string name="group_add_filter_main_content">사이즈와 성별을 선택할 수 있어요!</string>
+    <string name="group_add_filter_all_select">누구나 가능해요!</string>
 
     <!--채팅-->
     <string name="chat_list_title">채팅</string>
@@ -91,6 +97,5 @@
     <!--멍멍 짓기-->
     <string name="woof_dog_age">%d살</string>
     <string name="woof_dog_name">%s가 여기서 산책하고 있어요!</string>
-    <string name="group_add_group_subject_hint">모임명</string>
-    <string name="group_add_content_hint">모임을 소개해주세요.</string>
+
 </resources>
