--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -63,6 +63,12 @@
     <string name="group_list_date_minutes">%d분 전</string>
     <string name="group_list_date_now">방금 전</string>
     <string name="group_counter_count">%d명</string>
+    <string name="group_list_date_days">%d일 전</string>
+    <string name="group_list_date_hours">%d시간 전</string>
+    <string name="group_list_date_minutes">%d분 전</string>
+    <string name="group_list_date_now">방금 전</string>
+    <string name="group_list_add_title">모임 생성하기</string>
+    <string name="group_counter_count">%d명</string>
 
     <!--멍개 생성-->
     <string name="group_list_add_title">모임 생성하기</string>
