--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -143,4 +143,5 @@
     <string name="woof_permission">위치 권한이 필요합니다.</string>
     <string name="woof_setting">설정</string>
     <string name="woof_package">package:%s</string>
+    <string name="woof_mark_foot_print">발자국을 남겼습니다!!</string>
 </resources>
