--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -85,6 +85,8 @@
     <string name="group_add_filter_all_select">누구나 가능해요!</string>
     <string name="group_add_detail_main_title">모임 정보를 입력해주세요</string>
     <string name="group_add_detail_main_content">모임 사진과 최대 인원을 설정해주세요 !</string>
+    <string name="group_add_title_count">%d/100</string>
+    <string name="group_add_content_count">%d/1000</string>
 
     <!--채팅-->
     <string name="chat_list_title">채팅</string>
