--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -58,6 +58,10 @@
     <string name="group_dog_list_subject">댕댕이들</string>
     <string name="group_select_dog_subject">내 댕댕이 선택</string>
     <string name="group_select_commit">선택완료</string>
+    <string name="group_list_date_days">%d일 전</string>
+    <string name="group_list_date_hours">%d시간 전</string>
+    <string name="group_list_date_minutes">%d분 전</string>
+    <string name="group_list_date_now">방금 전</string>
 
     <!--채팅-->
     <string name="chat_list_title">채팅</string>
