--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -66,8 +66,8 @@
 
     <!--멍개 생성-->
     <string name="group_list_add_title">모임 생성하기</string>
-
-    <!--멍개 생성-->
+    <string name="group_list_next_btn">다음</string>
+    <string name="group_list_prev_btn">이전</string>
     <string name="group_add_information_main_title">모임을 소개해주세요.</string>
     <string name="group_add_information_main_content"> 기준으로 모임이 생성돼요.</string>
     <string name="group_add_dog_size_title">댕댕이 사이즈 선택</string>
