--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -97,6 +97,9 @@
     <string name="group_add_title_count">%d/100</string>
     <string name="group_add_content_count">%d/1000</string>
 
+    <!--댕댕이 선택-->
+    <string name="dog_selector_title">모임에 참여할 강아지를 선택해주세요.</string>
+    <string name="dog_select_content">조건에 맞는 댕댕이만 선택할 수 있어요!</string>
 
     <!--채팅-->
     <string name="chat_list_title">채팅</string>
