--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,15 @@
 <resources>
     <string name="app_name">friendogly</string>
 
+    <string name="dog_small">소형견</string>
+    <string name="dog_medium">중형견</string>
+    <string name="dog_large">대형견</string>
+
+    <string name="dog_gender_female">암컷</string>
+    <string name="dog_gender_male">수컷</string>
+    <string name="dog_gender_female_neutered">중성화 암컷</string>
+    <string name="dog_gender_male_neutered">중성화 수컷</string>
+
     <!--회원가입 화면-->
     <string name="register_now">간편하게 로그인 할래요</string>
 
@@ -98,6 +107,13 @@
     <string name="chat_unread_max_count">999+</string>
     <string name="chat_come_message">%s님이 들어왔습니다.</string>
     <string name="chat_out_message">%s님이 나갔습니다.</string>
+    <string name="chat_setting">설정</string>
+    <string name="chat_group_info">모임 정보</string>
+    <string name="chat_group_dog_size">댕댕이 사이즈</string>
+    <string name="chat_group_dog_gender">성별</string>
+    <string name="chat_group_join_people">참여 중인 견주</string>
+    <string name="chat_setting_alarm">채팅방 알림</string>
+
     <string name="group_number_of_people">%d/%d</string>
     <string name="group_group_info">%s · %s</string>
     <string name="group_participate_name">모집중</string>
@@ -106,5 +122,5 @@
     <!--멍멍 짓기-->
     <string name="woof_dog_age">%d살</string>
     <string name="woof_dog_name">%s가 여기서 산책하고 있어요!</string>
-
+    <string name="chat_mine">나</string>
 </resources>
