--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <!--마이페이지-->
     <string name="edit_profile_title">프로필 편집</string>
     <string name="register_dog_title">등록하기</string>
+    <string name="empty_pet_description">등록하기를 통해 강아지를 추가해주세요</string>
 
     <!--강아지 등록-->
     <string name="dog_name_title">댕댕이 이름</string>
