[AN] feat: 멍개 삭제 기능과 등록 UI 연결 후 기능 구체화 (#184)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -102,8 +102,13 @@
     <string name="group_detail_fail_load">모임을 찾지 못했습니다.</string>
     <string name="group_detail_fail_button">뒤로가기</string>
     <string name="group_detail_participate_text">참여하기</string>
-    <string name="group_datil_"></string>
-    
+    <string name="group_detail_un_participate_text">모집완료</string>
+    <string name="group_detail_mine_text">모임보기</string>
+    <string name="group_detail_update">수정하기</string>
+    <string name="group_detail_delete">방나가기</string>
+    <string name="group_detail_report">신고하기</string>
+    <string name="group_detail_block">차단하기</string>
+
     <!--댕댕이 선택-->
     <string name="dog_selector_title">모임에 참여할 강아지를 선택해주세요.</string>
     <string name="dog_select_content">조건에 맞는 댕댕이만 선택할 수 있어요!</string>
@@ -134,4 +139,5 @@
     <string name="woof_dog_age">%d살</string>
     <string name="woof_dog_name">%s가 여기서 산책하고 있어요!</string>
     <string name="chat_mine">나</string>
+
 </resources>
