--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -142,4 +142,5 @@
     <string name="woof_permission">위치 권한이 필요합니다.</string>
     <string name="woof_setting">설정</string>
     <string name="woof_package">package:%s</string>
+    <string name="woof_cant_mark">%d초 후에 발자국을 남길 수 있어요!</string>
 </resources>
