--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
 
     <!--내비게이션 메뉴-->
     <string name="bottom_home">홈</string>
-    <string name="bottom_woof">멍멍짖기</string>
+    <string name="bottom_woof">친구찾기</string>
     <string name="bottom_chat">채팅</string>
     <string name="bottom_my_page">나의 댕댕이</string>
 
