feat: 알림 권한 객체 구현

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -150,6 +150,7 @@
     <string name="chat_group_dog_gender">성별</string>
     <string name="chat_group_join_people">참여 중인 견주</string>
     <string name="chat_setting_alarm">채팅방 알림</string>
+    <string name="chat_setting_alarm_alert">알림을 거부하여 채팅 알림을 받을 수 없습니다.</string>
     <string name="chat_mine">나</string>
 
     <string name="group_number_of_people">%d/%d</string>
@@ -168,4 +169,9 @@
     <string name="female">여</string>
     <string name="male_enutered">남(중성화했어요)</string>
     <string name="female_enutered">여(중성화했어요)</string>
+
+    <string name="alarm_dialog_title">알람 허용 사용 설정</string>
+    <string name="alarm_dialog_body">알람을 설정하지 않으면, 채팅과 모임 알람을 받을 수 없어요!</string>
+    <string name="alarm_cancel">취소</string>
+    <string name="alarm_go_setting">설정</string>
 </resources>
