--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -219,6 +219,14 @@
     <string name="woof_package">package:%s</string>
     <string name="woof_cant_mark">%d초 후에 발자국을 남길 수 있어요!</string>
     <string name="woof_has_not_pet">강아지를 등록해야 발자국을 남길 수 있어요!</string>
+    <string name="woof_days_ago">%d일 전</string>
+    <string name="woof_hours_ago">%d시간 전</string>
+    <string name="woof_minutes_ago">%d분 전</string>
+    <string name="woof_just_now">방금 전</string>
+    <string name="woof_walk_before">%d분 째 가는 중</string>
+    <string name="woof_walk_ongoing">%d분 째 산책 중</string>
+    <string name="woof_walk_after">%d시 %d분에 왔다 감</string>
+    <string name="woof_walk_unknown">알 수 없음</string>
     <string name="male">남</string>
     <string name="female">여</string>
     <string name="male_enutered">남(중성화했어요)</string>
