--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -44,6 +44,32 @@
     <string name="pets_profile">함께하는 반려동물</string>
     <string name="tv_pet_add">강아지를 등록해주세요</string>
 
+    <!--다른 사용자 프로필-->
+    <string name="empty_other_pet">함께하는 반려동물이 없어요</string>
+    <string name="close">취소</string>
+
+    <!--사용자 더보기 바텀 시트-->
+    <string name="report">신고하기</string>
+    <string name="user_declare">차단하기</string>
+
+    <!--차단 다이얼로그-->
+    <string name="user_block_title">이 유저를 차단할까요?</string>
+    <string name="user_block_description">앞으로 이 유저의 정보를 볼 수 없어요</string>
+    <string name="user_block_yes">차단하기</string>
+    <string name="user_block_no">닫기</string>
+    <string name="user_block_message">유저를 차단했어요</string>
+
+    <!--신고 다이얼로그-->
+    <string name="user_report_title">신고하기</string>
+    <string name="user_report_one">스팸 및 도배 내용</string>
+    <string name="user_report_two">광고 및 홍보 내용</string>
+    <string name="user_report_three">음란물 또는 성적인 내용</string>
+    <string name="user_report_fourth">개인정보 노출</string>
+    <string name="user_report_five">기타</string>
+    <string name="user_report_edit_hint">직접 작성하기</string>
+    <string name="user_report_save">신고하기</string>
+    <string name="user_report_message">유저를 신고했어요</string>
+
     <!--강아지 등록-->
     <string name="dog_name_title">댕댕이 이름</string>
     <string name="register_dog_toolbar_title">댕댕이 등록하기</string>
