--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -246,4 +246,6 @@
     <string name="my_location_content">현재 위치</string>
     <string name="my_location_submit">설정 완료</string>
     <string name="my_location_submit_fail">올바른 위치가 아닙니다!</string>
+    <string name="my_location_load_fail">위치를 불러올 수 없습니다..</string>
+    <string name="my_location_full_address">%s %s %s</string>
 </resources>
