--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -143,6 +143,11 @@
     <string name="group_list_date_now">방금 전</string>
     <string name="group_counter_count">%d명</string>
     <string name="group_list_participation_filter">모집 조건 선택</string>
+    <string name="group_list_no_address_title">등록 된 주소가 없습니다</string>
+    <string name="group_list_no_address_content">주소를 등록해야 모임을 볼 수 있어요</string>
+    <string name="group_list_no_data_title">등록 된 모임이 없습니다.</string>
+    <string name="group_list_no_data_content">관련 모임을 등록해 보세요</string>
+    <string name="group_list_submit_text">등록하기</string>
 
     <!--멍개 생성-->
     <string name="group_list_add_title">모임 생성하기</string>
@@ -235,4 +240,11 @@
     <string name="permission_cancel">취소</string>
     <string name="permission_go_setting">설정</string>
     <string name="permission_denied_message">권한을 거부하여 기능을 사용할 수 없습니다.</string>
+
+    <!--내 위치-->
+    <string name="my_location_title">내 동네 설정하기</string>
+    <string name="my_location_content">현재 위치</string>
+    <string name="my_location_submit">설정 완료</string>
+    <string name="my_location_load_fail">위치를 불러올 수 없습니다..</string>
+    <string name="my_location_full_address">%s %s %s</string>
 </resources>
