--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -236,4 +236,9 @@
     <string name="permission_cancel">취소</string>
     <string name="permission_go_setting">설정</string>
     <string name="permission_denied_message">권한을 거부하여 기능을 사용할 수 없습니다.</string>
+    <string name="neuterd_status">중성화를 했어요</string>
+    <string name="small_pet_description">소형견이에요</string>
+    <string name="medium_pet_description">중현견이에요</string>
+    <string name="large_pet_description">대형견이에요</string>
+    <string name="user_name_length">%d/15</string>
 </resources>
