refactor: 펫 등록 UI 수정 및 상수화

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -101,6 +101,7 @@
     <!--강아지 등록-->
     <string name="pet_name_title">댕댕이 이름</string>
     <string name="register_pet_toolbar_title">댕댕이 등록하기</string>
+    <string name="patch_pet_toolbar_title">댕댕이 편집하기</string>
     <string name="register_pet_name_hint">댕댕이 이름을 입력해주세요</string>
     <string name="description_title">한 줄 소개</string>
     <string name="description_hint">한 줄 소개를 입력해주세요</string>
@@ -113,8 +114,9 @@
     <string name="pet_size_type_title">댕댕이 사이즈</string>
     <string name="pet_add_image_title">댕댕이 사진을 추가하세요</string>
     <string name="pet_gender_type_title">댕댕이 성별</string>
-    <string name="pet_submit_title">등록완료!</string>
+    <string name="pet_submit_title">선택 완료!</string>
     <string name="bottom_sheet_pet_edit_birthday_title">언제 태어났나요?</string>
+    <string name="pet_name_length">%d/20</string>
 
     <!--내비게이션 메뉴-->
     <string name="bottom_home">홈</string>
