refactor: geocoding sdk 버전 처리

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -254,6 +254,11 @@
     <string name="woof_age_month">%d개월</string>
     <string name="woof_not_exist_my_footprint">등록된 나의 발자국이 존재하지 않아요!</string>
     <string name="woof_my_footprint">MY</string>
+    <string name="woof_location_load_fail">위치를 불러올 수 없습니다..</string>
+    <string name="woof_register_walking_area">산책 영역 등록</string>
+    <string name="woof_register_footprint">이 위치에 발자국 등록</string>
+    <string name="woof_information">정보</string>
+    <string name="woof_description">소개</string>
 
     <!--프로필-->
     <string name="male">남</string>
@@ -282,4 +287,5 @@
     <string name="my_location_full_address">%s %s %s</string>
     <string name="woof_register_walking_area">산책 영역 등록</string>
     <string name="woof_register_footprint">이 위치에 발자국 등록</string>
+
 </resources>
