[AN] feat: 그룹 추가 도메인 적용과 api 구체화 (#305)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -161,10 +161,12 @@
 
     <!--멍개 생성-->
     <string name="group_list_add_title">모임 생성하기</string>
+    <string name="group_list_commit_btn">등록하기</string>
     <string name="group_list_next_btn">다음</string>
     <string name="group_list_prev_btn">이전</string>
     <string name="group_add_information_main_title">모임을 소개해주세요.</string>
-    <string name="group_add_information_main_content"> 기준으로 모임이 생성돼요.</string>
+    <string name="group_add_information_main_content">기준으로 모임이 생성돼요.</string>
+    <string name="group_add_information_fail_address">모임 생성을 위해서 주소를 등록해주세요!</string>
     <string name="group_add_dog_size_title">댕댕이 사이즈 선택</string>
     <string name="group_add_dog_gender_title">댕댕이 성별 선택</string>
     <string name="group_add_group_title">모임 제목</string>
@@ -182,6 +184,7 @@
     <string name="group_add_detail_main_content">모임 사진과 최대 인원을 설정해주세요 !</string>
     <string name="group_add_title_count">%d/100</string>
     <string name="group_add_content_count">%d/1000</string>
+    <string name="group_add_fail">모임 생성에 실패하였습니다..</string>
 
     <!--멍개 상세-->
     <string name="group_detail_fail_load">모임을 찾지 못했습니다.</string>
@@ -203,6 +206,7 @@
     <string name="dog_selector_title">모임에 참여할 강아지를 선택해주세요.</string>
     <string name="dog_select_content">조건에 맞는 댕댕이만 선택할 수 있어요!</string>
     <string name="dog_select_prevent_message">%s는 모임에 참여할 수 없어요..</string>
+    <string name="dog_select_load_fail">강아지를 등록해야 모임에 참여할 수 있어요!</string>
 
     <!--채팅-->
     <string name="chat_list_title">채팅</string>
